fixed knowledge section on mobile view centering and made about me font smaller

--- a/css/main.scss
+++ b/css/main.scss
@@ -85,19 +85,19 @@ $offBlack: #313639;
       color: $offWhite;
       text-shadow: 2px 2px #891f1f;
       line-height: 28px;
-      padding-bottom: 10px;
+      padding-bottom: 20px;
     }
   }
  }
 
   #aboutMe{
     p {
-      font-size: 25px;
-      width: 70%;
+      font-size: 18px;
+      width: 80%;
       margin-left: auto;
       margin-right: auto;
       background: rgba(255, 255, 255, 0.3);
-      padding: 50px;
+      padding: 20px;
     }
   }
 
@@ -111,7 +111,7 @@ $offBlack: #313639;
       width: 80%;
       margin-left: auto;
       margin-right: auto;
-      padding: 50px;
+      padding: 20px;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr;
